<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="application_tools_settings_log_crashes_title">Logging and errors.</string>
    <string name="application_tools_device_information">Device info</string>
    <string name="application_tools_build_config">Build Config</string>
    <string name="application_tools_network_information">Network</string>
    <string name="application_tools_screen_information">Screen</string>
    <string name="application_tools_crashes_list_title">Errors</string>
    <string name="application_tools_logs_list_title">Logs</string>
    <string name="application_tools_logs_crashes_clear_button_title">Clear</string>
    <string name="application_tools_logs_crashes_clear_dialog_title">Choose what you want to clear</string>
    <string name="application_tools_clear_crashes">Clear errors</string>
    <string name="application_tools_clear_logs">Clear logs</string>
    <string name="application_tools_clear_all">Clear all</string>
    <string name="application_tools_crashes_not_exist">No errors</string>
    <string name="application_tools_logs_not_exist">No logs</string>
    <string name="application_tools_crash_info_title">Error description</string>
    <string name="application_tools_crash_info_about_app">Application Information</string>
    <string name="application_tools_crash_info_about_phone">@string/application_tools_device_information</string>
    <string name="application_tools_crash_info_android_api_version">Android API</string>
    <string name="application_tools_crash_info_brand">Manufacturer</string>
    <string name="application_tools_crash_info_phone_name">Model name</string>
    <string name="application_tools_crash_info_share">Share</string>
    <string name="application_tools_crash_info_share_dialog_message">Send error</string>
    <string name="application_tools_crash_info_stack_trace">Stack Trace</string>
    <string name="application_tools_crash_info_app_version">Version</string>
    <string name="application_tools_crashes_direction_name">crashes</string>

    <!-- Страница настроек: проверка шрифтов - http://axure.tensor.ru/MobileAPP/%D0%BD%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8_%D0%B8_%D0%BF%D1%80%D0%BE%D1%84%D0%B8%D0%BB%D1%8C.html -->
    <string name="application_tools_font_check_main_text">The day lasts 11 hours 59 minutes. Time before sunset 2 hours 10 minutes</string>
    <string name="application_tools_font_check_sizeDisplay0">Regular 30 (sizeDisplay0)</string>
    <string name="application_tools_font_check_sizeDisplay1">Regular 24 (sizeDisplay1)</string>
    <string name="application_tools_font_check_sizeTitle1">Regular 20 (sizeTitle1)</string>
    <string name="application_tools_font_check_sizeTitle2">Regular 18 (sizeTitle2)</string>
    <string name="application_tools_font_check_sizeTitle3">Regular 17 (sizeTitle3)</string>
    <string name="application_tools_font_check_sizeBody1">Regular 16 (sizeBody1)</string>
    <string name="application_tools_font_check_sizeBody2">Regular 14 (sizeBody2)</string>
    <string name="application_tools_font_check_sizeCaption1">Regular 12 (sizeCaption1)</string>
    <string name="application_tools_debug_font_check_title">Validate fonts</string>

    <string name="application_tools_logs_dump_sender_process_name" translatable="false">:logsDumpSenderProcess</string>
</resources>