<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ru.tensor.sbis.design.sbis_text_view.SbisTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/application_tools_crash_info_phone_name"
            android:textColor="@color/palette_color_black1"/>

        <ru.tensor.sbis.design.sbis_text_view.SbisTextView
            android:id="@+id/device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:scrollHorizontally="true"
            android:textColor="@color/palette_color_black1"
            tools:text="21"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ru.tensor.sbis.design.sbis_text_view.SbisTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/application_tools_crash_info_brand"
            android:textColor="@color/palette_color_black1"/>

        <ru.tensor.sbis.design.sbis_text_view.SbisTextView
            android:id="@+id/device_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:scrollHorizontally="true"
            android:textColor="@color/palette_color_black1"
            tools:text="21"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ru.tensor.sbis.design.sbis_text_view.SbisTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/application_tools_crash_info_android_api_version"
            android:textColor="@color/palette_color_black1"/>

        <ru.tensor.sbis.design.sbis_text_view.SbisTextView
            android:id="@+id/device_android_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:scrollHorizontally="true"
            android:textColor="@color/palette_color_black1"
            tools:text="21"/>
    </LinearLayout>
</LinearLayout>