<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/palette_color_white0"
    android:orientation="vertical">

    <ru.tensor.sbis.design.topNavigation.view.SbisTopNavigationView
        android:id="@+id/sbisToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:SbisTopNavigation_showBackButton="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="8dp"
            android:paddingRight="5dp"
            android:paddingBottom="16dp">

            <androidx.cardview.widget.CardView
                style="@style/Theme.AppCompat.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:elevation="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
                        android:id="@+id/crash_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="@color/color_accent"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="Place of mCrash"/>

                    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
                        android:id="@+id/crash_reason"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/palette_color_black1"
                        android:textSize="15sp"
                        tools:text="Reason of mCrash"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/Theme.AppCompat.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:elevation="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/application_tools_crash_info_stack_trace"
                        android:textColor="@color/color_accent"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardElevation="3dp">

                        <HorizontalScrollView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginTop="10dp">

                            <ru.tensor.sbis.design.sbis_text_view.SbisTextView
                                android:id="@+id/stacktrace"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:scrollHorizontally="true"
                                android:textColor="@color/palette_color_black1"/>
                        </HorizontalScrollView>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/Theme.AppCompat.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:elevation="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/application_tools_crash_info_about_phone"
                        android:textColor="@color/color_accent"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardElevation="3dp">

                        <include
                            layout="@layout/application_tools_device_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/Theme.AppCompat.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:elevation="2dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <ru.tensor.sbis.design.sbis_text_view.SbisTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/application_tools_crash_info_about_app"
                        android:textColor="@color/color_accent"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardElevation="3dp">

                        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/app_info_details"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="5dp"
                                android:scrollbars="vertical"/>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>